@@ -69,6 +69,7 @@ x86_64_init (elf, machine, eh, ehlen)
   /* gcc/config/ #define DWARF_FRAME_REGISTERS.  */
   eh->frame_nregs = 17;
   HOOK (eh, set_initial_registers_tid);
+  HOOK (eh, set_initial_registers_local);
 
   return MODVERSION;
 }
